--- a/eya+hadil/index.html
+++ b/eya+hadil/index.html
@@ -82,7 +82,7 @@
                             <div class="hero__text">
                                 <h2>Gamini</h2>
                                 <span>où l'amusement rencontre l'innovation</span>
-                                <a href="portfolio.html" class="primary-btn">Jouer</a>
+                                <a href="../src/login.php" class="primary-btn">Jouer</a>
                             </div>
                         </div>
                     </div>
