--- a/eya+hadil/about.html
+++ b/eya+hadil/about.html
@@ -335,7 +335,7 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6">
                         <div class="footer__top__logo">
-                            <a href="#"><img src="img/logo.png" alt=""></a>
+                            <a href="#"><img src="img/loggo.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6">
@@ -353,15 +353,17 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="footer__option__item">
-                            <h5>About us</h5>
-                            <p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an award-winning, full-service
-                                production company specializing.</p>
-                            <a href="#" class="read__more">Read more <span class="arrow_right"></span></a>
+                            <h5>À propos</h5>
+                            <p>Gamini, une destination pour le jeu ultime !
+                                Notre équipe passionnée vous propose une sélection variée de jeux captivants,
+                                allant des classiques intemporels aux dernières nouveautés.
+                                Rejoignez notre communauté et plongez dans une expérience de jeu immersive et divertissante.</p>
+                            <a href="#" class="read__more">Lire plus <span class="arrow_right"></span></a>
                         </div>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-3">
                         <div class="footer__option__item">
-                            <h5>Who we are</h5>
+                            <h5>Pages</h5>
                             <ul>
                                 <li><a href="#">Team</a></li>
                                 <li><a href="#">Carrers</a></li>
