--- a/eya+hadil/Flappy-Bird-Game-main/index.html
+++ b/eya+hadil/Flappy-Bird-Game-main/index.html
@@ -13,7 +13,7 @@
     <div class="background"></div>
     <img src="images/Bird.png" alt="bird-img" class="bird" id="bird-1">
     <div class="message">
-        Enter To Start Game <p><span style="color: red;">&uarr;</span> ArrowUp to Control</p>
+        Jouer <p><span style="color: red;"></span></p>
     </div>
     <div class="score">
         <span class="score_title"></span>
