--- a/eya+hadil/devlopeur.html
+++ b/eya+hadil/devlopeur.html
@@ -43,9 +43,9 @@
                             </div>
                             <div class="profile-header-buttons">
                                 <a href="postuler_projet.html" class="btn btn-xs btn-primary"> Projet</a>
-                                <a href="recdev.html" class="btn btn-xs btn-primary"> Réclamation</a>
+                                <a href="recdev.php" class="btn btn-xs btn-primary"> Réclamation</a>
                                 <a href="avis.html" class="btn btn-xs btn-primary"> Avis</a>
-                                <a href="#" class="btn btn-xs btn-primary">Déconnexion</a>
+                                <a href="../src/logout.php" class="btn btn-xs btn-primary">Déconnexion</a>
                             </div>
                         </div>
                     </div>
