--- a/eya+hadil/devlopeur.html
+++ b/eya+hadil/devlopeur.html
@@ -35,10 +35,10 @@
                         
                         <div class="profile-header-content">
                             <div class="profile-header-img">
-                                <img src="../dash/img/testimonial-1.jpg" alt="Profile Image" />
+                                <img src="img/eya.jpg" alt="Profile Image" />
                             </div>
                             <div class="profile-header-info">
-                                <h4 class="m-t-sm">Clyde Stanley</h4>
+                                <h4 class="m-t-sm">Eya Zaafouri</h4>
                                 <p class="m-b-sm">UXUI + Frontend Developer</p>
                             </div>
                             <div class="profile-header-buttons">
