--- a/eya+hadil/joueur.html
+++ b/eya+hadil/joueur.html
@@ -35,16 +35,16 @@
                         
                         <div class="profile-header-content">
                             <div class="profile-header-img">
-                                <img src="../dash/img/testimonial-1.jpg" alt="Profile Image" />
+                                <img src="img/balsem.jpg" alt="Profile Image" />
                             </div>
                             <div class="profile-header-info">
-                                <h4 class="m-t-sm">Clyde Stanley</h4>
-                                <p class="m-b-sm">UXUI + Frontend Developer</p>
+                                <h4 class="m-t-sm">Balsem Hamdi</h4>
+                                <p class="m-b-sm">Joueur round 3</p>
                             </div>
                             <div class="profile-header-buttons">
-                                <a href="rec.html" class="btn btn-xs btn-primary">Réclamation</a>
+                                <a href="recJou.php" class="btn btn-xs btn-primary">Réclamation</a>
                                 <a href="avis.html" class="btn btn-xs btn-primary">Avis</a>
-                                <a href="#" class="btn btn-xs btn-primary">Déconnexion</a>
+                                <a href="../src/logout.php" class="btn btn-xs btn-primary">Déconnexion</a>
                             </div>
                         </div>
                     </div>
