--- a/eya+hadil/joueur.html
+++ b/eya+hadil/joueur.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="profile-header-buttons">
                                 <a href="recJou.php" class="btn btn-xs btn-primary">Réclamation</a>
-                                <a href="avis.html" class="btn btn-xs btn-primary">Avis</a>
+                                <a href="avisjou.php" class="btn btn-xs btn-primary">Avis</a>
                                 <a href="../src/logout.php" class="btn btn-xs btn-primary">Déconnexion</a>
                             </div>
                         </div>
