--- a/eya+hadil/memory-game-main/memory.html
+++ b/eya+hadil/memory-game-main/memory.html
@@ -43,7 +43,7 @@
             <p>Bravo ! Vous avez trouvé toutes les <span id="numCardPairs"></span> paires en <span
                     id="numGuesses"></span> essais.</p>
                     <button onClick="window.location.reload();" type="button" class="link" id="reload">Rejouer</button>
-        <a href="https://nowcodethis.com/projects/"><button type="button" class="link" id="back">quitter</button></a>
+        <a href="joueur.php"><button type="button" class="link" id="back">quitter</button></a>
         </div>
     </div>
     
