--- a/eya+hadil/postuler_projet.html
+++ b/eya+hadil/postuler_projet.html
@@ -202,6 +202,7 @@
 
         .popup h2 {
             margin-top: 0;
+            text-align: left;
         }
 
         .popup input,
@@ -212,6 +213,7 @@
             /* Augmenté pour créer un espacement uniforme */
             padding: 8px;
             box-sizing: border-box;
+            color:whitesmoke;
         }
 
         .popup button {
