--- a/eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/index.html
+++ b/eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/index.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta name="author" content="CodePel">
-      <title> Tic-Tac-Toe Example </title>
-      <!-- Style CSS -->
-      <link rel="stylesheet" href="./css/style.css">
-      <!-- Demo CSS (No need to include it into your project) -->
-      <link rel="stylesheet" href="./css/demo.css">
-      <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css'>
-   </head>
-   <body>
-      <!--$%adsense%$-->
-      <main class="cd__main">
-         <!-- Start DEMO HTML (Use the following code into your project)-->
-         <!- Colours and Board from this awesome Dribbble by Zan Illic https://dribbble.com/shots/1710515-Tic-Tac-Toe->
 
-<div class="container">
-  <div class="board clearfix">
-    <div class="row">
-      <div class="square" id="0"></div>
-      <div class="square" id="1"></div>
-      <div class="square" id="2"></div>
-    </div>
-    <div class="row">
-      <div class="square" id="3"></div>
-      <div class="square" id="4"></div>
-      <div class="square" id="5"></div>
-    </div>
-    <div class="row">
-      <div class="square" id="6"></div>
-      <div class="square" id="7"></div>
-      <div class="square" id="8"></div>
-    </div>
-    <div class="modal-container">
-      <div class="modal choose-modal">
-        <h3>Choisissez votre arme</h3>
-        <div class="button-area"><span class="x-marker">X</span><span class="o-marker">O</span>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="CodePel">
+  <title> Tic-Tac-Toe Example </title>
+  <!-- Style CSS -->
+  <link rel="stylesheet" href="./css/style.css">
+  <!-- Demo CSS (No need to include it into your project) -->
+  <link rel="stylesheet" href="./css/demo.css">
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css'>
+</head>
+
+<body>
+  <!--$%adsense%$-->
+  <main class="cd__main">
+    <!-- Start DEMO HTML (Use the following code into your project)-->
+    <!- Colours and Board from this awesome Dribbble by Zan Illic https://dribbble.com/shots/1710515-Tic-Tac-Toe->
+
+      <div class="container">
+        <div class="board clearfix">
+          <div class="row">
+            <div class="square" id="0"></div>
+            <div class="square" id="1"></div>
+            <div class="square" id="2"></div>
+          </div>
+          <div class="row">
+            <div class="square" id="3"></div>
+            <div class="square" id="4"></div>
+            <div class="square" id="5"></div>
+          </div>
+          <div class="row">
+            <div class="square" id="6"></div>
+            <div class="square" id="7"></div>
+            <div class="square" id="8"></div>
+          </div>
+          <div class="modal-container">
+            <div class="modal choose-modal">
+              <h3>Choisissez votre arme</h3>
+              <div class="button-area"><span class="x-marker">X</span><span class="o-marker">O</span>
+              </div>
+            </div>
+            <div class="modal end-game-modal">
+              <h3></h3>
+              <p>À la prochaine !</p>
+              <br>
+              <div class="button-area">
+                <span id="replay-button">Rejouer</span>
+                <span id="quit-button">Quitter</span>
+
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="modal end-game-modal">
-        <h3></h3>
-        <p>Armez-vous mieux la prochaine fois !</p>
-        <div class="button-area"><span>Rejouer</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-         <!-- END EDMO HTML (Happy Coding!)-->
-      </main>
-      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
-      <!-- Script JS -->
-      <script src="./js/script.js"></script>
-      <!--$%analytics%$-->
-   </body>
+        <!-- END EDMO HTML (Happy Coding!)-->
+  </main>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
+  <!-- Script JS -->
+  <script src="./js/script.js"></script>
+  <!--$%analytics%$-->
+</body>
+
 </html>
