--- a/eya+hadil/devlopeur.html
+++ b/eya+hadil/devlopeur.html
@@ -67,7 +67,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Fruits à Gogo</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/FruitGame-main/3. Fruits Game (JQuery)/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Serpent</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/3d-snake-game-main/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Tic Tac Toc</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Rio vol</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/Flappy-Bird-Game-main/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Héros à la Baguette</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/StickHero_Game/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Memoiry</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/memory-game-main/memory.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
