--- a/eya+hadil/joueur.html
+++ b/eya+hadil/joueur.html
@@ -66,7 +66,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Fruits à Gogo</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/FruitGame-main/3. Fruits Game (JQuery)/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Serpent</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/3d-snake-game-main/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Tic Tac Toc</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/tic-tac-toe-game-player-vs-computer-in-javascript/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Rio vol</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/Flappy-Bird-Game-main/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Héros à la Baguette</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/StickHero_Game/index.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="portfolio__item__text">
                             <h4>Memoiry</h4>
-                            <a href="../src/login.php" class="play-button">Jouer</a>
+                            <a href="../eya+hadil/memory-game-main/memory.html" class="play-button">Jouer</a>
                         </div>
                     </div>
                 </div>
